# oa-python-sword2

./: .gitignore  LICENSE  README.md  pyproject.toml
jenkins/: jenkins_build.sh
sword2/: models.py
sword2/client/: __init__.py  client.py  util.py
sword2/server/: __init__.py  __main__.py  app.py  auth.py  exceptions.py  globals.py  messages.py  multipart.py  repository.py  util.py
sword2/server/controllers/: collection.py  edit.py  edit_media.py  mapper.py
sword2/server/views/: blueprint.py
sword2/tests/: fixtures.py  test_client.py  test_models.py  test_repository.py  test_server.py  test_utils.py
sword2/tests/resources/: collection.xml  depositreceipt.xml  entry.xml  servicedocument.xml
